# yallHap

./: .gitignore  HANDOFF.md  LICENSE  README.md  REFERENCE_DATA.md  RESEARCH.md  VALIDATION_TESTING.md  ZENODO_MANIFEST.md  pyproject.toml  validation_1kg_full.json  validation_aadr_2000_filtered.json
.cursor-plans/: cursor-rules-generation.md
.cursor/rules/: bioinformatics.mdc  code-style.mdc  error-handling.mdc  general.mdc  git.mdc  python.mdc  tdd.mdc
.github/workflows/: ci.yml
conda/: meta.yaml
docker/: Dockerfile
pipelines/nextflow/: README.md  main.nf  nextflow.config
pipelines/nextflow/modules/: yallhap.nf
pipelines/snakemake/: README.md  Snakefile  config.yaml
pipelines/snakemake/envs/: yallhap.yaml
reference/yleaf/: README.md
scripts/: 5_yleaf.sh  6_ancient_comparison.sh  analyze_isogg_mismatches.py  calculate_significance.py  download_1kg_validation.py  download_aadr.py  download_ancient_test_data.py  download_gnomad_highcov.py  download_liftover_chains.py  download_yfull_tree.py  eigenstrat_to_vcf.py  gather_validation_and_comparative_data.py  power_analysis_ancient.py  prep_for_zenodo.py  run_benchmarks.py  run_yallhap_ancient_comparison.sh  stratify_aadr_validation.py  test_coalescent_priors.py  validate_1kg.py  validate_aadr_stratified.py  validate_isogg.py  validate_isogg_subset.py
src/yallhap/: __init__.py  ancient.py  bam.py  bayesian.py  classifier.py  cli.py  contamination.py  isogg.py  scoring.py  snps.py  tree.py  validation.py  vcf.py
src/yclade/: __init__.py  classifier.py  cli.py  snps.py  tree.py
tests/: conftest.py  test_ancient.py  test_bam.py  test_bayesian.py  test_classifier.py  test_cli.py  test_contamination.py  test_integration.py  test_isogg.py  test_output.py  test_path_traversal.py  test_scoring.py  test_snps.py  test_tree.py  test_validation.py  test_vcf_allelic_depth.py
tests/fixtures/: sample_isogg.txt
