[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yallhap"
version = "0.2.0"
description = "Modern, pipeline-friendly Y-chromosome haplogroup inference"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "yallHap Contributors"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["bioinformatics", "genetics", "Y-chromosome", "haplogroup", "phylogenetics"]

dependencies = [
    "pysam>=0.22.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "click>=8.0.0",
    "requests>=2.28.0",
    "pyliftover>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pandas-stubs>=2.0.0",
    "types-requests>=2.28.0",
    "tqdm>=4.65.0",
    "rich>=13.0.0",
    "matplotlib>=3.7.0",
]

[project.scripts]
yallhap = "yallhap.cli:main"
yallHap = "yallhap.cli:main"

[project.urls]
Homepage = "https://github.com/trianglegrrl/yallhap"
Documentation = "https://github.com/trianglegrrl/yallhap#readme"
Repository = "https://github.com/trianglegrrl/yallhap"
Issues = "https://github.com/trianglegrrl/yallhap/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # function call in default argument (needed for Click)
]

[tool.ruff.lint.isort]
known-first-party = ["yallhap"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
# numpy.typing.mypy_plugin is deprecated in NumPy 2.3+

[[tool.mypy.overrides]]
module = ["pysam.*", "pandas.*", "pyliftover.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/yallhap"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
